# terminal-pastebin

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: cmd.rs  main.rs
