[package]
name = "termbin"
version = "0.1.0"
edition = "2021"
rust-version = "1.71.0"
description = "A simple command line tool to upload text to termbin.com"
readme = "README.md"
license = "MIT"
repository = "https://github.com/Eshanatnight/termbin"
categories = ["command-line-utilities", "pastebin"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3.19", features = ["default", "cargo", "derive"]}
clipboard = "0.5.0"
